# cre-stoatan-demo

./: .gitignore
docs/: mobile-design-doc.md  notebook-overview.md  pipeline-demo.md  warehouse-signal-globe.jsx
docs/ml-extension/: costar_label_taxonomy.md  cre_impact_system_architecture.md  cre_impact_system_architecture_v2.md
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx
frontend/src/lib/: api.ts  format.ts  geo-coords.ts  (+2 more)
warehouse-signal/: .env.example  .gitignore  Dockerfile  Procfile  README.md  nixpacks.toml  pyproject.toml  requirements.txt
warehouse-signal/notebooks/: pipeline-walkthrough.ipynb
warehouse-signal/scripts/: analyze.py  ingest.py
warehouse-signal/src/warehouse_signal/: __init__.py  config.py
warehouse-signal/src/warehouse_signal/analysis/: __init__.py  base.py  extractor.py  mock.py  pipeline.py  prompt.py
warehouse-signal/src/warehouse_signal/api/: demo_routes.py  deps.py  routes.py  server.py
warehouse-signal/src/warehouse_signal/ingestion/: parser.py  pipeline.py
warehouse-signal/src/warehouse_signal/models/: schemas.py
warehouse-signal/src/warehouse_signal/providers/: __init__.py  base.py  earningscall.py  fmp.py  mock.py
warehouse-signal/src/warehouse_signal/radar/: alerts.py  display.py
warehouse-signal/src/warehouse_signal/scoring/: aggregator.py
warehouse-signal/src/warehouse_signal/storage/: sqlite.py
warehouse-signal/src/warehouse_signal/universe/: sp500.py
warehouse-signal/tests/: test_analysis.py  test_ingestion.py  test_radar.py  test_scoring.py
(+26 files in other folders)
